--- a/front/src/index.css
+++ b/front/src/index.css
@@ -14,5 +14,16 @@
     text-align: center;
     padding: .25rem;
   }
+  textarea {
+    border: none;
+    overflow: auto;
+    outline: none;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none; /*remove the resize handle on the bottom right*/
+  }
 }
 
